--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,18 +1,18 @@
 <mat-tab-group>
-  <mat-tab label="Login">
-    <form role="form" (submit)="login()"><br>
+  <mat-tab label="Log in">
+    <form role="form" (ngSubmit)="login()"><br>
       <mat-form-field>
-        <input matInput placeholder="Username">
+        <input matInput placeholder="Username" name="username" [(ngModel)]="model.username">
       </mat-form-field>
       <br/>
 
       <mat-form-field>
-        <input matInput placeholder="Password" [type]="hide ? 'password' : 'text'">
+        <input matInput placeholder="Password" name="password" [(ngModel)]="model.password" [type]="hide ? 'password' : 'text'">
         <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
       </mat-form-field>
       <br/>
 
-      <button mat-raised-button color="primary" type="submit">LOGIN</button>
+      <button mat-raised-button [disabled]="loading" color="primary" type="submit">LOG IN</button>
       <br/>
 
       <mat-slide-toggle color="primary"><small>Remember me!</small></mat-slide-toggle>
@@ -20,7 +20,25 @@
     
   </mat-tab>
   <mat-tab label="Sign up">
+    <form role="form" (ngSubmit)="signup()"><br>
+      <mat-form-field>
+        <input matInput placeholder="Username" name="username" [(ngModel)]="model.username">
+      </mat-form-field>
+      <br/>
 
-    
+      <mat-form-field>
+        <input matInput placeholder="Password" name="password" [(ngModel)]="model.password" [type]="hide ? 'password' : 'text'">
+        <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
+      </mat-form-field>
+      <br/>
+
+      <mat-form-field>
+        <input matInput placeholder="Confirm password" name="confirm_password" [(ngModel)]="model.confirm_password" [type]="hide ? 'password' : 'text'">
+        <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
+      </mat-form-field>
+      <br/>
+
+      <button mat-raised-button [disabled]="loading" color="primary" type="submit">SIGN UP</button>
+    </form >
   </mat-tab>
 </mat-tab-group>
